GNOME Bugzilla – Bug 704437
Fixes for GTK+'s recent deprecation warnings
Last modified: 2013-08-13 13:45:04 UTC
This is mostly code removal. I'm not sure if any of this is stuff we want to keep, but I haven't used any of it in all the years I've been hacking on gnome-shell, so...
Created attachment 249467 [details] [review] menu: Remove support for icon items from the window menu We don't show these by default, and it uses deprecated API. This also removes our only use of the stock icons, so remove those as well.
Created attachment 249468 [details] [review] Remove old, deprecated utilities that nobody has used in a million years
Review of attachment 249467 [details] [review]: You can also remove inlinepixbufs.h from .gitignore.
Attachment 249467 [details] pushed as e633606 - menu: Remove support for icon items from the window menu Attachment 249468 [details] pushed as 8c1c774 - Remove old, deprecated utilities that nobody has used in a million years