src/ui/menu.h
@@ -27,11 +27,6 @@
 #include <gtk/gtk.h>
 #include "frames.h"
 
-/* Stock icons */
-#define METACITY_STOCK_DELETE   "metacity-delete"
-#define METACITY_STOCK_MINIMIZE "metacity-minimize"
-#define METACITY_STOCK_MAXIMIZE "metacity-maximize"
-
 struct _MetaWindowMenu
 {
   MetaFrames *frames;
